RESOLVED FIXED178023
Netflix playback fails with S7353 error
https://bugs.webkit.org/show_bug.cgi?id=178023
Summary Netflix playback fails with S7353 error
Jer Noble
Reported 2017-10-06 12:28:02 PDT
Netflix playback fails with S7353 error
Attachments
Patch (2.10 KB, patch)
2017-10-06 12:32 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-10-06 12:31:29 PDT
Jer Noble
Comment 2 2017-10-06 12:32:19 PDT
WebKit Commit Bot
Comment 3 2017-10-06 14:02:14 PDT
Comment on attachment 323037 [details] Patch Clearing flags on attachment: 323037 Committed r222995: <http://trac.webkit.org/changeset/222995>
WebKit Commit Bot
Comment 4 2017-10-06 14:02:16 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 5 2017-10-06 16:41:27 PDT
LayoutTest media/media-source/media-source-paint-to-canvas.html is failing after this change: https://build.webkit.org/results/Apple%20Sierra%20Release%20WK1%20(Tests)/r222997%20(5141)/results.html Mac EWS test bots didn't catch this because they were all stuck on another patch :(
Matt Lewis
Comment 6 2017-10-09 10:48:05 PDT
It is also worth noting that the expectations on El Capitan were [ Pass Fail ] due to a bug filed back in June: https://bugs.webkit.org/show_bug.cgi?id=173565 According to the dashboard, it looks like the test had actually stopped being flaky on El Capitan Release prior to this patch.
Matt Lewis
Comment 7 2017-10-09 10:48:31 PDT
(In reply to Matt Lewis from comment #6) > It is also worth noting that the expectations on El Capitan were [ Pass Fail > ] due to a bug filed back in June: > https://bugs.webkit.org/show_bug.cgi?id=173565 > > According to the dashboard, it looks like the test had actually stopped > being flaky on El Capitan Release prior to this patch. History: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fmedia-source%2Fmedia-source-paint-to-canvas.html
Note You need to log in before you can comment on or make changes to this bug.